<resources>
    <!-- Other strings -->
    <string name="app_name">Team-7-TCSS-450</string>

    <!-- SignIn Fragment strings -->
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="register_goto_registration">Register</string>
    <string name="option_stay_signed_in">Stay Signed In</string>

    <!-- Registration Fragment strings -->
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_again_hint">Retype Password</string>
    <string name="register_attempt_register_user">Register</string>

    <!-- Strings used for fragments for navigation -->
    <string name="title_home">Home</string>
    <string name="home_greeting">Welcome, %1$s!</string>
    <string name="title_weather">Weather</string>
    <string name="title_messages">Messages</string>
    <string name="title_account">Account</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_activity_account_fragment">AccountFragment</string>

    <!-- Strings used for connecting to web services -->
    <string name="base_url_service">https://team7-tcss450-project-service.herokuapp.com/</string>
    <string name="base_url_auth">https://team7-tcss450-project-auth.herokuapp.com/</string>
    <string name="base_url_weather_service">https://team7-tcss450-project-service.herokuapp.com/weatherbit/</string>
    <string name="base_url_contact_service">https://team7-tcss450-project-service.herokuapp.com/contacts/</string>

    <!-- Strings used for weather forecast fragment -->
    <string name="label_weather_max_temp">Max</string>
    <string name="label_weather_average_temp">Avg</string>
    <string name="label_weather_min_temp">Min</string>
    <string name="label_weather_precipitation">Precip</string>
    <string name="label_weather_humidity">Humidity</string>
    <string name="label_weather_wind">Wind</string>
    <string name="content_desc_weather_icon">Weather Icon</string>
    <string name="value_weather_with_units">%1$04.1f%2$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings used for the sign out switch -->
    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>

    <!-- Strings used for contacts action bar -->
    <string name="action_invite_contact">Invite New Contact</string>
    <string name="action_view_request_contacts">Requests</string>
    <string name="action_view_invite_contacts">Invites</string>
    <string name="dialogue_title_add_new_contact">Add New Contact</string>
    <string name="hint_contact_email">Email Address</string>

    <!-- Contact Information -->
    <string name="label_fullname"></string>
    <string name="label_username">User Name: %1$s</string>
    <string name="label_email">Email: %1$s</string>
    <string name="label_memberid">MemberID: %1$s</string>

    <!-- Strings used for chat feature -->
    <string name="content_desc_send_msg">Send Message</string>
    <string name="hint_text_message">Text Message</string>
    <string name="label_chat_rooms">Rooms</string>
    <string name="label_chat">Chat</string>
    <string name="menu_label_add_chat">New Chat</string>
    <string name="dialogue_title_add_chat">Create New Chat</string>
    <string name="hint_chat_title">Chat Title</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>

</resources>