<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.team_7_tcss_450.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.team_7_tcss_450.ui.weather.WeeklyForecastFragment"
        android:label="@string/title_weather" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.team_7_tcss_450.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.team_7_tcss_450.ui.contacts.ContactListFragment"
        android:label="@string/title_contacts" />
    <navigation android:id="@+id/navigation_nested_chat"
        app:startDestination="@id/navigation_message">
        <fragment
            android:id="@+id/navigation_message"
            android:name="com.example.team_7_tcss_450.ui.chat.ChatRoomsListFragment"
            android:label="@string/title_messages"
            tools:layout="@layout/fragment_chat_rooms_list">
            <action
                android:id="@+id/action_navigation_message_to_chatFragment"
                app:destination="@id/chatFragment" />
        </fragment>
        <fragment
            android:id="@+id/chatFragment"
            android:name="com.example.team_7_tcss_450.ui.chat.ChatFragment"
            android:label="@string/label_chat"
            tools:layout="@layout/fragment_chat">
            <argument
                android:name="chatId"
                app:argType="integer" />
        </fragment>
    </navigation>
</navigation>